# CV-tests

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: Dataset.py  Detection.py  Explorer.py  ReconstructionEngine.py  Trajectory.py  hello.py  main.py  projection.py
