[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
torch = "^2.0.1"
numpy = "^1.25.0"
pandas = "^2.0.3"
open3d = "^0.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
